fix: align all fonts

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -4,8 +4,8 @@
   box-shadow: none;
   border-radius: 3px;
   color: white;
-  font-family: "FireCode Nerd Font", FontAwesome, Roboto, Helvetica, Arial, sens-serif;
-  font-size: 13px;
+  font-family: "NotoSans Nerd Font", Roboto, Helvetica, Arial, sens-serif;
+  font-size: 12px;
   min-height: 0;
 }
 
